# portsec-manager

./: .gitignore  Dockerfile  README.md  cli.py  download_mib.py  nornir_config.yaml  portsec-manager.py  portsec_manager.py  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: docker-build.yml  pylint.yml
core/: classes.py
core/plugins/: clear_sticky_snmp.py  console_print_switch.py  get_status_data.py  get_status_data_snmp.py  print_switch_web.py
inv/: hosts.yaml
inventory/: defaults.yaml  hosts.yaml
mib/: BRIDGE-MIB.py  CISCO-C2900-MIB.py  CISCO-PORT-SECURITY-MIB.py  CISCO-STACK-MIB.py  CISCO-VLAN-MEMBERSHIP-MIB.py  CISCO-VTP-MIB.py  ENTITY-MIB.py  P-BRIDGE-MIB.py  Q-BRIDGE-MIB.py
mibs/: BRIDGE-MIB.py  CISCO-PORT-SECURITY-MIB.py  CISCO-SMI.py  CISCO-STACK-MIB.py  CISCO-TC.py  CISCO-VLAN-MEMBERSHIP-MIB.py  CISCO-VTP-MIB.py  ENTITY-MIB.py  EtherLike-MIB.py  FDDI-SMT73-MIB.py  IANAifType-MIB.py  IF-MIB.py  P-BRIDGE-MIB.py  Q-BRIDGE-MIB.py  RMON-MIB.py  RMON2-MIB.py  SNMPv2-MIB.py  TOKEN-RING-RMON-MIB.py
portsec-manager/plugins/: clear_sticky_snmp.py
portsec_manager/plugins/: console_print_switch.py  get_status_data.py  get_status_data_snmp.py  short_name.py
portsecmanager/: classes.py
portsecmanager/plugins/: console_print_switch.py  get_status_data.py  get_status_data_cli_ssh.py  get_status_data_snmp.py
pysnmp_mibs/: CISCO-STACK-MIB.py  IF-MIB.py
util/: mib_downloader.py
utils/: download_mib.py  mib_downloader.py
web/: __init__.py  routes.py  views.py  webapp.py
web/static/: cui-standard.css
(+6 files in other folders)
